--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/say-hello
       # run – произвольная bash-команда
       # ls -la выведет содержимое текущего репозитория
-      - run: ls -la
+      - run: say-hello
