--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -11,7 +11,7 @@ jobs:
     steps: # список шагов, которые надо выполнить
       # экшен, выполняет какую-то задачу
       # checkout – клонирует репозиторий
-      - uses: actions/say-hello
+      - uses: actions/checkout@v3
       # run – произвольная bash-команда
       # ls -la выведет содержимое текущего репозитория
-      - run: say-hello
+      - run: make say-hello
